Add homepage support for new roomba page.

--- a/containers/htpc-ui/etc/nginx/htpc.conf
+++ b/containers/htpc-ui/etc/nginx/htpc.conf
@@ -127,3 +127,12 @@ server {
         proxy_set_header Host localhost;
     }
 }
+
+server {
+    server_name roomba.*;
+    listen 443 ssl;
+
+    location / {
+        proxy_pass http://127.0.0.1:8084;
+    }
+}
