Misc homepage fixes:
- svg instead of png
- direct people directly to the (WIP) roomba dashboard

--- a/containers/htpc-ui/etc/nginx/htpc.conf
+++ b/containers/htpc-ui/etc/nginx/htpc.conf
@@ -132,6 +132,10 @@ server {
     server_name roomba.*;
     listen 443 ssl;
 
+    location = / {
+        return 302 /dashboard/;
+    }
+
     location / {
         proxy_pass http://127.0.0.1:8084;
     }
