Set up reflector to automatically run and update pacman mirror.
It now runs whenever pacman-mirror list updates. I copied this setup
from https://wiki.archlinux.org/index.php/Reflector#Pacman_hook.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -68,6 +68,7 @@
     /etc/vconsole.conf: etc/vconsole.conf
     /etc/locale.conf: etc/locale.conf
     /etc/pacman.d/hooks/99-secureboot.hook: etc/pacman.d/hooks/99-secureboot.hook
+    /etc/pacman.d/hooks/mirrorupgrade.hook: etc/pacman.d/hooks/mirrorupgrade.hook
 
 - shell:
   - [git update-submodules, Install/update submodules]
