--- a/ssh/config
+++ b/ssh/config
@@ -1,11 +1,6 @@
 ServerAliveInterval 120
 AddKeysToAgent yes
 
-Host clark
-HostName clark.jflei.com
-User clark
-ForwardAgent yes
-
 Host kent
 HostName kent.jflei.com
 #HostName kent
@@ -49,11 +44,6 @@ HostName 34.82.48.146
 User jeremyfleischman
 #LocalForward 8080 localhost:8080
 
-# Asus router @ Snowdon
-Host strider
-HostName 192.168.1.1
-User admin
-
 Host sonic
 User jfly
 HostName sh.sonic.net
@@ -72,3 +62,19 @@ Host g2g
 Hostname g2g.honordev.com
 User pi
 ###
+
+### Snowdon stuff
+# Asus router @ Snowdon
+Host strider
+HostName 192.168.1.1
+User admin
+
+Host clark
+HostName clark.jflei.com
+User clark
+ForwardAgent yes
+
+Host thermostat
+HostName thermostat
+User pi
+ForwardAgent yes
