--- a/ssh/config
+++ b/ssh/config
@@ -66,7 +66,7 @@ User pi
 ### Snowdon stuff
 # Asus router @ Snowdon
 Host strider
-HostName 192.168.1.1
+HostName strider
 User admin
 
 Host clark
