--- a/containers/htpc-ui/docker-compose.yml
+++ b/containers/htpc-ui/docker-compose.yml
@@ -19,6 +19,7 @@ services:
 
         volumes:
             - /etc/clark/nginx/ssl:/etc/nginx/ssl
+            - ./etc/nginx/nginx.conf:/etc/nginx/nginx.conf
             - ./etc/nginx/htpc.conf:/etc/nginx/service-htpc.conf
             - ./etc/nginx/basic_auth_file:/etc/nginx/basic_auth_file
             - ./webroot:/webroot
