--- a/containers/home-assistant/docker-compose.yml
+++ b/containers/home-assistant/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: home-assistant
     image: homeassistant/home-assistant:stable
     volumes:
-      - ./config:/config
+      - /mnt/media/home-assistant/config:/config
     environment:
       - TZ=America/Los_Angeles
     restart: always
