--- a/containers/htpc-ui/etc/nginx/htpc.conf
+++ b/containers/htpc-ui/etc/nginx/htpc.conf
@@ -140,3 +140,12 @@ server {
         proxy_pass http://127.0.0.1:8084;
     }
 }
+
+server {
+    server_name home-assistant.*;
+    listen 443 ssl;
+
+    location / {
+        proxy_pass http://127.0.0.1:8123;
+    }
+}
