--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -54,6 +54,7 @@
     /etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf: etc/systemd/logind.conf.d/no-suspend-on-lidswitch.conf
     /etc/systemd/logind.conf.d/suspend-on-powerbutton.conf: etc/systemd/logind.conf.d/suspend-on-powerbutton.conf
 
+    /etc/udevmon.yaml: etc/udevmon.yaml
     /etc/udev/rules.d/10-local.rules: etc/udev/rules.d/10-local.rules
     /etc/systemd/system/monitors@.service: etc/systemd/system/monitors@.service
 
