Always size tmux to the smallest connected client.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -32,6 +32,7 @@
     ~/.jupyter/nbconfig: jupyter/nbconfig
     ~/.mplayer: mplayer
     ~/.ssh/config: ssh/config
+    ~/.tmux.conf: tmux.conf
     ~/.vimrc: vimrc
     ~/.vim: vim
     ~/.xinitrc: xinitrc
