--- a/containers/htpc-ui/etc/nginx/htpc.conf
+++ b/containers/htpc-ui/etc/nginx/htpc.conf
@@ -131,6 +131,10 @@ server {
     listen 443 ssl;
 
     location / {
+        # TODO: discuss. this should be ok because home-assistant has its own authentication system, yes?
+        satisfy any;
+        allow all;
+        auth_basic off;
         proxy_pass http://127.0.0.1:8123;
     }
 }
