Oh snap! Hardware accelerated video decoding seems to work now =)
Thank you
https://wiki.archlinux.org/index.php/Chromium#Force_GPU_acceleration and
https://bbs.archlinux.org/viewtopic.php?id=244031

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,7 @@
 
     ~/bin: bin
     ~/.config/alacritty: config/alacritty
+    ~/.config/chromium-flags.conf: config/chromium-flags.conf
     ~/.config/dunst: config/dunst
     ~/.config/fontconfig: config/fontconfig
     ~/.config/gtk-3.0: config/gtk-3.0
