Add .py to my global gitattributes file.
This affects the behavior of `git grep --show-function`. I'm not really
sure why it's necessary, given that git already has baked in support for
the Python regex, it just doesn't know to use it for `.py` files?

- https://stackoverflow.com/questions/2783086/how-does-git-diff-generate-hunk-descriptions
- https://rehansaeed.com/gitattributes-best-practices/

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,6 +20,7 @@
     ~/.config/chromium-flags.conf: config/chromium-flags.conf
     ~/.config/dunst: config/dunst
     ~/.config/fontconfig: config/fontconfig
+    ~/.config/git: config/git
     ~/.config/gtk-3.0: config/gtk-3.0
     ~/.config/pirate-get: config/pirate-get
     ~/.config/roxterm.sourceforge.net: config/roxterm.sourceforge.net
