--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -136,7 +136,10 @@ font:
     #style: Bold Italic
 
   # Point size
+  # Monitor
   size: 8.0
+  # Mobile
+  #size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
