--- a/config/chromium-flags.conf
+++ b/config/chromium-flags.conf
@@ -1,3 +1,5 @@
 --enable-accelerated-video-decode
 --enable-gpu-rasterization
 --enable-zero-copy
+--oauth2-client-id=77185425430.apps.googleusercontent.com
+--oauth2-client-secret=OTJgUOQcT7lO7GsGZq2G4IlT
