Finally trying out mpd

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.config/fontconfig: config/fontconfig
     ~/.config/git: config/git
     ~/.config/gtk-3.0: config/gtk-3.0
+    ~/.config/mpd/mpd.conf: config/mpd/mpd.conf
     ~/.config/pirate-get: config/pirate-get
     ~/.config/roxterm.sourceforge.net: config/roxterm.sourceforge.net
     ~/.config/rslsync: config/rslsync
@@ -34,6 +35,7 @@
     ~/.gitignore_global: gitignore_global
     ~/.jupyter/nbconfig: jupyter/nbconfig
     ~/.mplayer: mplayer
+    ~/.mpdscribble: mpdscribble
     ~/.ssh/config: ssh/config
     ~/.tmux.conf: tmux.conf
     ~/.vimrc: vimrc
