Urg, would really like to have the ability to reload just a single window, but this is better than nothing.
relevant? https://github.com/alacritty/alacritty/issues/4590

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -306,7 +306,7 @@ font:
   #unfocused_hollow: true
 
 # Live config reload (changes require restart)
-live_config_reload: false
+live_config_reload: true
 
 # Shell
 #
@@ -628,4 +628,4 @@ schemes:
         cyan:    '#93a1a1' # base1
         white:   '#fdf6e3' # base3
 
-colors: *dark
+colors: *light
