--- a/containers/htpc-ui/etc/nginx/nginx.conf
+++ b/containers/htpc-ui/etc/nginx/nginx.conf
@@ -15,6 +15,7 @@ events {
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    charset       utf8;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
