--- a/docker/config.json
+++ b/docker/config.json
@@ -1,9 +1,7 @@
 {
 	"auths": {
+		"542313659077.dkr.ecr.us-west-2.amazonaws.com": {},
 		"900965112463.dkr.ecr.us-west-2.amazonaws.com": {}
-	},
-	"HttpHeaders": {
-		"User-Agent": "Docker-Client/19.03.1-ce (linux)"
 	},
 	"detachKeys": "ctrl-^,q",
 	"credsStore": "secretservice"
