This is a neat idea.
h4-temp-aws grabs creds that h4-bastion-proxy can use to figure out a
server's ip, and then ssh to it using bastion as a jump host.

Unrelated, I also added a aws-sso.sh script to help out with managing
sso accounts for tools that don't support them yet. Urg cdk:
https://github.com/aws/aws-cdk/issues/5455.

--- a/ssh/config
+++ b/ssh/config
@@ -52,6 +52,10 @@ IdentitiesOnly yes
 Hostname 34.219.121.184
 User ubuntu
 RemoteForward 4001 localhost:5050
+
+Host h4-*
+ProxyCommand h4-bastion-proxy %h %p %n
+User jeremy
 ###
 
 ### Snowdon stuff
