Updating dns for San Clemente as well.
I haven't actually bothered changing the domain name. I don't want to
risk doing that remotely. I'll try to remember to do it next time I'm
visiting!

--- a/ssh/config
+++ b/ssh/config
@@ -98,13 +98,12 @@ User alarm
 
 ### San Clemente stuff
 Host kent
-# HostName kent.jflei.com
-HostName kent
+HostName kent.sc.jflei.com
 User kent
-ForwardAgent yes
+#ForwardAgent yes
 
 Host sc-router
 User root
-HostName 192.168.11.1
+HostName router.sc.jflei.com
 KexAlgorithms diffie-hellman-group14-sha1
 ###
