Urg it's never trivial :(

--- a/containers/htpc-ui/etc/nginx/service-htpc.conf
+++ b/containers/htpc-ui/etc/nginx/service-htpc.conf
@@ -118,6 +118,12 @@ server {
     listen 443 ssl;
 
     location / {
+        // Downgrade the proxied request from HTTP 1.1 to 1.0. The upstream
+        // (xerox) HTTP server responds with HTTP 100 Continue's, and nginx
+        // doesn't seem to play nicely with that. Downgrading to 1.0 prevents
+        // the server from doing anything with Continue's. See
+        // https://forum.nginx.org/read.php?2,241130,241139 for more details.
+        proxy_http_version 1.0;
         proxy_pass https://lloyd;
     }
 }
