--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
+[submodule "aconfmgr"]
+	path = aconfmgr-src
+	url = https://github.com/CyberShadow/aconfmgr
