--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -139,7 +139,7 @@ font:
   # Monitor
   size: 8.0
   # Mobile
-  #size: 11.0
+  #<<< size: 11.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -628,4 +628,5 @@ schemes:
         cyan:    '#93a1a1' # base1
         white:   '#fdf6e3' # base3
 
+#<<< colors: *dark
 colors: *light
