--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,4 +1,8 @@
-- clean: ['~']
+- clean:
+    ~/:
+        force: true
+    ~/.config:
+        recursive: true
 
 - defaults:
     link:
@@ -22,10 +26,7 @@
     ~/.config/fontconfig: config/fontconfig
     ~/.config/git: config/git
     ~/.config/mpd/mpd.conf: config/mpd/mpd.conf
-    ~/.config/pirate-get: config/pirate-get
-    ~/.config/roxterm.sourceforge.net: config/roxterm.sourceforge.net
-    ~/.config/rslsync: config/rslsync
-    ~/.config/termite: config/termite
+    ~/.config/systemd: config/systemd
     ~/.direnvrc: direnvrc
     ~/.dir_colors: dir_colors
     ~/.docker/config.json: docker/config.json
@@ -33,7 +34,6 @@
     ~/.gitignore_global: gitignore_global
     ~/.jupyter/nbconfig: jupyter/nbconfig
     ~/.mplayer: mplayer
-    ~/.mpdscribble: mpdscribble
     ~/.ssh/config: ssh/config
     ~/.tmux.conf: tmux.conf
     ~/.vimrc: vimrc
@@ -47,4 +47,5 @@
     ~/.themes: themes
     ~/.config/gtk-3.0: config/gtk-3.0
 
-- shell:
+    # clark specific
+    ~/.config/pirate-get: config/pirate-get
