More misc cleanup

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -49,3 +49,7 @@
     ~/.config/pirate-get:
         if: '[ hostname = "clark" ]'
         path: config/pirate-get
+
+- shell:
+    - command: test -d ~/.oh-my-zsh || git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh
+      description: Install oh-my-zsh
