Updates in light of trying to create a live usb.
font-manager didn't immediately build. I don't remember the last time I
used it, so I opted to just let it go. Bye bye!

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -53,3 +53,5 @@
 - shell:
     - command: test -d ~/.oh-my-zsh || git clone git://github.com/robbyrussell/oh-my-zsh.git ~/.oh-my-zsh
       description: Install oh-my-zsh
+    - command: vim +PlugInstall +qall
+      description: Install vim plugins
