Set up a default monospace font.
This is nice and DRY!

Urg this xmobar + trayer magic is getting annoying, though...

--- a/homies/config/fontconfig/conf.d/10-default-fonts.conf
+++ b/homies/config/fontconfig/conf.d/10-default-fonts.conf
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?> <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+
+<!-- Make Ubuntu Mono Nerd Font the default monospace font -->
 <fontconfig>
+<alias>
+   <family>monospace</family>
+   <prefer>
+     <family>Ubuntu Mono Nerd Font</family>
+   </prefer>
+ </alias>
+
 <!-- Add generic family. -->
 <match target="pattern">
     <test qual="any" name="family"><string>emoji</string></test>
