--- a/homies/config/alacritty/alacritty.yml
+++ b/homies/config/alacritty/alacritty.yml
@@ -97,7 +97,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: UbuntuMono Nerd Font Mono
+    family: monospace
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
