Misc aconfmgr cleanup

--- a/aconfmgr-config/files/etc/cups/printers.conf
+++ b/aconfmgr-config/files/etc/cups/printers.conf
@@ -6,7 +6,7 @@ NextPrinterId 19
 PrinterId 18
 UUID urn:uuid:521957fa-befc-3cba-4238-755f1b717b24
 Info Color laser (Xerox Phaser 6510)
-Location 
+Location Snowdon
 MakeModel Xerox Phaser 6510
 DeviceURI dnssd://lloyd._pdl-datastream._tcp.local/?uuid=4c66dd80-1dd2-11b2-88b0-9c934e6dbb48
 State Idle
@@ -35,7 +35,7 @@ Info HL-2240 HL-2240 series
 Location San Clemente
 DeviceURI dnssd://Brother%20HL-2240%20series%20%40%20kent._ipp._tcp.local/cups?uuid=d75ebbc9-3bd9-3712-41af-7415318e6de5
 State Idle
-StateTime 1625499958
+StateTime 1634170968
 ConfigTime 1574736316
 Type 4
 Accepting Yes
