--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -45,6 +45,7 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = monospace:pixelsize=12;2
+font-1 = Segoe UI Symbol:size=11;2
 
 modules-left = xworkspaces
 modules-center = xwindow
