--- a/homies/config/mpd/mpd.conf
+++ b/homies/config/mpd/mpd.conf
@@ -1,17 +1,9 @@
-# Recommended location for database
-db_file            "~/.config/mpd/database"
+log_file "syslog"
 
-# Logs to systemd journal
-log_file           "syslog"
+db_file "~/.config/mpd/database"
+music_directory "/mnt/media/beets"
 
-# The music directory is by default the XDG directory, uncomment to amend and choose a different directory
-music_directory    "/mnt/media/beets"
-
-# Uncomment to refresh the database whenever files in the music_directory are changed
-#auto_update "yes"
-
-# Uncomment to enable the functionalities
-#playlist_directory "~/.config/mpd/playlists"
-#pid_file           "~/.config/mpd/pid"
-#state_file         "~/.config/mpd/state"
-#sticker_file       "~/.config/mpd/sticker.sql"
+audio_output {
+    type "pipewire"
+    name "PipeWire Sound Server"
+}
