More polybar polish.

--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -44,8 +44,8 @@ padding = 0
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = monospace:pixelsize=12;2
-font-1 = Segoe UI Symbol:size=11;2
+font-0 = monospace:pixelsize=13;2
+font-1 = Segoe UI Symbol:size=12;2
 
 modules-left = xworkspaces
 modules-center = xwindow
@@ -60,6 +60,13 @@ wm-restack = generic
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[settings]
+screenchange-reload = true
+
+[global/wm]
+margin-top = 0
+margin-bottom = 0
 
 [module/xwindow]
 type = internal/xwindow
@@ -78,22 +85,19 @@ format = <label-state>
 label-active = %name%
 label-active-foreground = #ffffff
 label-active-background = #3f3f3f
-label-active-underline = #fba922
-label-active-padding = 2
+label-active-padding = 1
 
 label-occupied = %name%
-label-occupied-underline = #555555
-label-occupied-padding = 2
+label-occupied-padding = 1
 
 label-urgent = %name%
 label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
-label-urgent-underline = #9b0a20
-label-urgent-padding = 2
+label-urgent-padding = 1
 
 label-empty =
 label-empty-foreground = #55
-label-empty-padding = 2
+label-empty-padding = 1
 
 [module/mpd]
 type = internal/mpd
@@ -110,7 +114,6 @@ type = internal/cpu
 interval = 2
 format-prefix = "CPU: "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
 label = %percentage:2%%
 
 [module/memory]
@@ -118,7 +121,6 @@ type = internal/memory
 interval = 2
 format-prefix = "MEM: "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
 label = %percentage_used%%
 
 [module/date]
@@ -130,8 +132,6 @@ time = %H:%M
 
 format-prefix =
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
-
 label = %date% %time%
 
 [module/pulseaudio]
@@ -151,35 +151,28 @@ adapter = AC
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+format-full = <ramp-capacity> <label-full>
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+animation-charging-framerate = 500
 
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
 animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
-
-[settings]
-screenchange-reload = true
-
-[global/wm]
-margin-top = 0
-margin-bottom = 0
+animation-discharging-framerate = 500
