--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -44,7 +44,7 @@ padding = 0
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = monospace:pixelsize=13;2
+font-0 = monospace:bold:pixelsize=13;2
 font-1 = Segoe UI Symbol:size=12;2
 
 modules-left = xworkspaces
