More misc xmonad + polybar cleanup

--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -137,11 +137,15 @@ label = %date% %time%
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume>
-label-volume = VOL %percentage%%
+format-volume = <ramp-volume> <label-volume>
+ramp-volume-0 = 🔈
+ramp-volume-1 = 🔉
+ramp-volume-2 = 🔊
+format-volume-foreground = ${colors.foreground-alt}
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = muted
+label-muted = 🔇
 label-muted-foreground = #666
 
 [module/battery]
