Oh this is slick

--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -163,6 +163,8 @@ format-charging = <animation-charging> <label-charging>
 format-discharging = <animation-discharging> <label-discharging>
 format-full = <ramp-capacity> <label-full>
 
+label-full = ⚡
+
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
