Use symbolic tray icons
This was a massive rabbithole. It all started with pasystray 0.8, which
switched to using a symbolic icon, which didn't show up at all
(https://github.com/christophgysin/pasystray/issues/151).

This triggered a bunch of reading, and I learned about this polybar bug,
which I fixed https://github.com/polybar/polybar/issues/2235. (The
aconfmgr config is a bit messy because I can't just use the aur provided
version of polybar anymore).

Then, I realized I kind of like the flat look of the symbolic pasystray
icon, and I wanted to get blueman and nm-applet to do the same thing.
After another round of way too much research, I learned that:

- gtk has some support for telling applications that they should use
  symbolic icons or not (see the `-gtk-icon-style` css rulebelow). When
  you run `nm-applet --indicator`, it seems to "get the hint" and use
  the symbolic icons [it now includes in the
  package](https://gitlab.gnome.org/GNOME/network-manager-applet/-/merge_requests/84).
- blueman also "gets the hint" and tries to look for -symbolic versions
  of its icons, but those don't exist, so it ends up using the regular
  icons. I was able to work around that by creating a custom icon theme
  that *does* provide the various missing `blueman-*-symbolic` files.

--- a/homies/config/polybar/config.ini
+++ b/homies/config/polybar/config.ini
@@ -52,13 +52,15 @@ font-1 = Segoe UI Symbol:size=18;2
 
 modules-left = xworkspaces
 modules-center = xwindow
-modules-right = mpd pulseaudio cpu memory battery date
+modules-right = mpd cpu memory battery date
 
 tray-position = right
 ; tray-padding = 0
 tray-padding = 4
 ; tray-maxsize = 16
 tray-maxsize = 22
+
+tray-foreground = ${colors.foreground}
 
 ; Allow full screen windows to appear on top of polybar.
 wm-restack = generic
@@ -138,20 +140,6 @@ time = %H:%M
 format-prefix =
 format-prefix-foreground = ${colors.foreground-alt}
 label = %date% %time%
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume = <ramp-volume> <label-volume>
-ramp-volume-0 = 🔈
-ramp-volume-1 = 🔉
-ramp-volume-2 = 🔊
-format-volume-foreground = ${colors.foreground-alt}
-label-volume = %percentage%%
-label-volume-foreground = ${root.foreground}
-
-label-muted = 🔇
-label-muted-foreground = #666
 
 [module/battery]
 type = internal/battery
