--- a/homies/ssh/config
+++ b/homies/ssh/config
@@ -35,23 +35,30 @@ ServerAliveInterval 60
 ProxyCommand 2fa-bastion %h %p
 User jeremy
 
-Host g2g
+Host h4g2g
 Hostname g2g.honordev.com
 User pi
 
-Host h4-interview
+Host h4interview
 Hostname bugs.honor-projects.com
-IdentityFile ~/Downloads/experimental-eng-interview.pem
+IdentityFile ~/.ssh/aws/experimental-eng-interview.pem
 User ubuntu
 RemoteCommand tmux attach
 RequestTTY yes
 
-Host h4-webhook-tunnel
-IdentityFile ~/.aws/key-pairs/experimental-hackday.pem
+Host h4webhook-tunnel
+IdentityFile ~/.ssh/aws/experimental-hackday.pem
 IdentitiesOnly yes
 Hostname 34.219.121.184
 User ubuntu
 RemoteForward 4001 localhost:5050
+
+Host h4mac
+IdentityFile ~/.ssh/aws/experimental-jeremy.pem
+IdentitiesOnly yes
+Hostname 10.1.25.182
+ProxyJump bastion
+User ec2-user
 
 Host h4-*
 ProxyCommand h4-bastion-proxy %h %p %n
