Add in flameshot configuration.
I don't know how I forgot to do this before!

This file looks like it's going to be annoying: that [General] section
looks like it's going to change a lot :grrr:

There's something weird going on with `TYPE_COPY` that I don't have time
to figure out right now.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -29,6 +29,7 @@
     ~/.config/alacritty: homies/config/alacritty
     ~/.config/chromium-flags.conf: homies/config/chromium-flags.conf
     ~/.config/dunst: homies/config/dunst
+    ~/.config/flameshot: homies/config/flameshot
     ~/.config/fontconfig: homies/config/fontconfig
     ~/.config/git: homies/config/git
     ~/.config/mpd/mpd.conf: homies/config/mpd/mpd.conf
