--- a/aconfmgr-config/files/etc/nix/nix.conf
+++ b/aconfmgr-config/files/etc/nix/nix.conf
@@ -10,7 +10,7 @@ build-users-group = nixbld
 sandbox = false
 
 # https://github.com/NixOS/nixpkgs/issues/80332
-experimental-features = nix-command
+experimental-features = nix-command flakes
 
 # Needed to build for a Raspberry PI.
 extra-platforms = aarch64-linux
