Nixify my flameshot config as well.
I'm tired of seeing flameshot.ini show up as modified. Now that won't
happen anymore =)

--- a/my-nix/flameshot/flameshot.ini
+++ b/my-nix/flameshot/flameshot.ini
@@ -1,7 +1,7 @@
 [General]
 disabledTrayIcon=true
-drawColor=#f4dfde
-drawThickness=11
+drawColor=#0000ff
+drawThickness=6
 ignoreUpdateToVersion=0.9.0
 savePathFixed=false
 showHelp=false
