Switch to using asdf-direnv.
This plugin basically does exactly what my hand-rolled direnvrc was
doing. So glad I'm not the only one who likes this way =)

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,7 +33,8 @@
     ~/.config/mpd/mpd.conf: homies/config/mpd/mpd.conf
     ~/.config/polybar: homies/config/polybar
     ~/.config/systemd: homies/config/systemd
-    ~/.direnvrc: homies/direnvrc
+    ~/.config/direnv/direnvrc: homies/config/direnv/direnvrc
+    ~/.config/direnv/direnv.toml: homies/config/direnv/direnv.toml
     ~/.dir_colors: homies/dir_colors
     ~/.docker/config.json: homies/docker/config.json
     ~/.gitconfig: homies/gitconfig
