--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,7 @@
     ~/.jupyter/nbconfig: homies/jupyter/nbconfig
     ~/.mplayer: homies/mplayer
     ~/.ssh/config: homies/ssh/config
+    ~/.ssh/config.d: homies/ssh/config.d
     ~/.tmux.conf: homies/tmux.conf
     ~/.xinitrc: homies/xinitrc
     ~/.Xresources: homies/Xresources
