--- a/homies/config/alacritty/alacritty.yml
+++ b/homies/config/alacritty/alacritty.yml
@@ -619,7 +619,8 @@ schemes:
 
       # Bright colors
       bright:
-        black:   '#002b36' # base03
+        #black:   '#002b36' # base03
+        black:   '#475b62'  # Solarized Dark - Patched. See https://github.com/mbadolato/iTerm2-Color-Schemes#solarized-dark---patched for details.
         red:     '#cb4b16' # orange
         green:   '#586e75' # base01
         yellow:  '#657b83' # base00
